@@ -80,7 +80,14 @@ my @stirling1 = (
 [qw/0 -121645100408832000 431565146817638400 -668609730341153280 610116075740491776 -371384787345228000 161429736530118960 -52260903362512720 12953636989943896 -2503858755467550 381922055502195 -46280647751910 4465226757381 -342252511900 20692933630 -973941900 34916946 -920550 16815 -190 1 0/],
 );
 
-plan tests => 2 + 1 + scalar(@stirling3) + scalar(@stirling2) + scalar(@stirling1) + 3 + 2+6 + 4;
+plan tests => 2      # bernfrac
+            + 1      # bernvec
+            + scalar(@stirling3) + scalar(@stirling2) + scalar(@stirling1)
+            + 3      # large stirling
+            + 5      # harmfrac
+            + 6      # harmreal
+            + 4      # bernreal
+            ;
 
 {
   my @num = map { (bernfrac(2*$_))[0] }  0 .. $#A000367;
@@ -127,6 +134,9 @@ is( stirling(137,14,2), '1199210915528490302987124727846553116364556801667331812
 is( stirling(99,14,1), '-76185801962487294910690331431878395972434237854033124053130281967496159110075633618163409236750708320666097319441407130017141175404355750702612480000000', "s(99,14)" );
 
 ###########
+is_deeply( [harmfrac(0)], [qw/0 1/], "harmfrac(0) = 0/1");
+is_deeply( [harmfrac(1)], [qw/1 1/], "harmfrac(1) = 1/1");
+is_deeply( [harmfrac(2)], [qw/3 2/], "harmfrac(2) = 3/2");
 is_deeply( [harmfrac(27)], [qw/312536252003 80313433200/], "harmfrac(27)");
 is_deeply( [harmfrac(172)], [qw/79501058066082280981403896527589637839225193778798494740482914683623969349 13880309301456766718169645534485312116208863916210197754275864148562288000/], "harmfrac(172)");
 
