@@ -51,7 +51,7 @@ plan tests => 1 + scalar(keys %rv) + 2 +
             + 7 + 5
             + 1    # riemannr non-int
             + 4    # li
-            + 3;   # ei
+            + 5;   # ei
 
 is_deeply( [map { zeta($_,46) } 2 .. 20],
            \@zeta,
@@ -124,4 +124,6 @@ is(li("1" . "3" x 48, 71), "12143015694679233755826665180456251925892758147.1447
 
 is(ei("-.999999",71),"-.21938430227532932486722325953484931808376271553585943741535217668894641", "ei(-.999999)");
 is(ei(".0000001",71),"-15.540879886056784427519372537151549799926662195341116860222690550334380", "ei(-.0000001)");
-is(ei(123,71),"2147292057663749807443512898798152106344989006252421.1953818484307608884", "ei(123)");
+is(ei(123,71),"2147292057663749807443512898798152106344989006252421.1953818484307608884", "ei(123,71)");
+is(ei(170),"4001203217922547287677390566067207066648E32", "ei(170)");
+is(ei(2,80),"4.9542343560018901633795051302270352755180535624200420545270952545707079132984072", "ei(2,80)");
