@@ -21,6 +21,10 @@ Revision history for Perl module Math::Prime::Util::GMP
     - is_ecpp_prime() returns 1 or 0, rather than 2 or 0.  This matches the
       documentation and other functions (e.g. bls75, miller, aks).
 
+    - harmfrac(0) returns zero.
+
+    - ei > 100 called euler constant with incorrect precision.
+
     [PERFORMANCE]
 
     - The first 100 Bernoulli numbers are cached, and more will be cached
